--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
       <!-- miExperiencia-area-end -->
 
       <!-- map-area-start -->
-      <div class="map"></div>
+      <div class="map">
+        <img src="./image/map.png" alt="">
+      </div>
       <!-- map-area-end -->
 
       <!-- blografia-start -->
